# onlyfits

./: .cta.json  .env.example  .gitignore  Dockerfile  Makefile  README.md  biome.json  docker-compose.yaml  go.mod  index.html  package.json  pyproject.toml  requirements.txt  stats.html  vite.config.ts
.github/workflows/: ci-cd.yml  deploy.yml  go-test.yml  python-app.yml
.postman/: Invoice_API_Collection.json
app/: main.py  schemas.py
app/api/: analyze.py  chat.py
app/core/: clients.py  config.py  prompts.py
app/services/: chatbot_service.py  wellness_service.py
backend/: .goreleaser.yml  Dockerfile  Makefile  docker-compose.yml  go.sum
backend/.postman/: Branch_API_Collection.json  Subscription_API_Collection.json
backend/migrations/: 20260105040715_create_table_fitcore.sql  20260105141650_create_seed_fitcore.sql  20260108023526_create_password_reset_tokens.sql  20260113084459_alter_deleted_at_to_soft_delete.sql  20260115041947_alter_organization_owner.sql  20260115053902_alter_get_profile.sql  20260118084916_alter_table_invoices_add_payment_method.sql  20260118093412_create_function_new_member.sql  20260118180503_alter_function_create_user_with_branch.sql  20260121035104_alter_table_invoices_add_external_id.sql  20260208135250_create_chat_memory_table.sql  (+1 more)
frontend/: docker-compose.yml  package-lock.json
migrations/: 20260116132532_create_function_new_user.sql  20260118090304_alter_table_subscriptions_drop_columns.sql  20260118183652_create_function_member_with_user.sql  20260207141057_create_unlogged_cache_table.sql
src/: env.ts  routeTree.gen.ts
(+380 files in other folders)
